changed title icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rock Paper Scissors Game</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://static.vecteezy.com/system/resources/thumbnails/000/691/489/original/retro-offset-rock-paper-scissors-icons.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.iconscout.com/icon/free/png-512/javascript-20-555998.png">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
